--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ script:
 - python manage.py test
 - cd $TRAVIS_BUILD_DIR
 deploy:
+  skip_cleanup: true
   provider: script
   script: "$TRAVIS_BUILD_DIR/deploy.sh"
   on:
