--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ cache: pip
 services:
 - docker
 before_install:
+# https://docs.travis-ci.com/user/encrypting-files/
+# travis encrypting file only allow one file
 - openssl aes-256-cbc -K $encrypted_2e3704f31d08_key -iv $encrypted_2e3704f31d08_iv
-  -in google_compute_engine.enc -out google_compute_engine -d
-- openssl aes-256-cbc -K $encrypted_2e3704f31d08_key -iv $encrypted_2e3704f31d08_iv
-  -in .dockercfg.enc -out .dockercfg -d
+  -in secrets.tar.enc -out secrets.tar -d
+- tar xvf secrets.tar
 - pip install -U pip
 - pip install wheel
 - mv .dockercfg ~
