--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
-sudo: required
 language: python
+cache: pip
 python:
 - '3.5'
-cache: pip
 services:
 - docker
 before_install:
@@ -12,15 +11,13 @@ before_install:
 - echo "make deploy" > deploy.sh && chmod +x deploy.sh
 - pip install -U pip
 - pip install wheel
-env:
-  global:
-  - PIP_WHEEL_DIR=$HOME/.cache/pip/wheels
-  - PIP_FIND_LINKS=file://$HOME/.cache/pip/wheels
 install:
 - pip wheel -r requirements.txt
 - pip install -r requirements.txt
 script:
-- cd src && py.test --cov=./
+- cd ./src
+- py.test --cov=./
+- flake8 ./
 - cd $TRAVIS_BUILD_DIR
 deploy:
   skip_cleanup: true
