--- a/compose.template
+++ b/compose.template
@@ -1,6 +1,6 @@
-{name}.server:
-    image: {name}
+server:
     command: python manage.py runserver 0:80 --settings=porkguy.production_settings
     hostname: porkguy.test.gliacloud.com
     ports:
     - 80
+    scale: 1
