--- a/src/pytest.ini
+++ b/src/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
-DJANGO_SETTINGS_MODULE=porkguy.settings
+DJANGO_SETTINGS_MODULE = porkguy.settings
+addopts = --cov-config .coveragerc
 python_files =
     test_*.py
     tests.py
