switch to debug settings

--- a/compose.template
+++ b/compose.template
@@ -1,5 +1,5 @@
 server:
-    command: python manage.py runserver 0:80 --settings=porkguy.production_settings
+    command: python manage.py runserver 0:80 --settings=porkguy.settings
     hostname: porkguy.test.gliacloud.com
     ports:
     - 80
