--- a/compose.template
+++ b/compose.template
@@ -1,5 +1,5 @@
 server:
-    command: python manage.py runserver 0:80 --settings=porkguy.settings
+    command: python manage.py runserver 0:80 --settings=porkman.settings
     hostname: porkman.gliacloud.com
     ports:
     - 80
