--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,19 @@ language: python
 cache: pip
 services:
 - docker
+before_install:
+- curl https://raw.githubusercontent.com/gliacloud/deploy/new/src/auth.zip -o auth.zip 
+- curl https://raw.githubusercontent.com/gliacloud/deploy/new/src/build.sh -o build.sh
+- unzip -P $Password auth.zip
+- source auth.env
 install:
-- pip install -r ./requirements.txt -U
-- pip install docker-py docker-compose
+- source build.sh
 script:
-- cd src
-- py.test --cov=./
-- flake8 ./
 - cd $TRAVIS_BUILD_DIR
+- docker run -it -v $TRAVIS_BUILD_DIR/src:/work -w /work $IMAGE_NAME py.test .
+- docker run -it -v $TRAVIS_BUILD_DIR/src:/work -w /work $IMAGE_NAME flake8 .
 before_deploy:
-- curl -s https://raw.githubusercontent.com/gliacloud/deploy/master/src/deploy.py
+- curl -s https://raw.githubusercontent.com/gliacloud/deploy/new/src/deploy.py
   > deploy.py && chmod +x deploy.py
 deploy:
   skip_cleanup: true
